<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#CCC"
    tools:context="com.example.mohamedabdelaziz.moslem.Setting">


<FrameLayout
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">
    <Button
        android:text="@string/aboutapp"
        android:id="@+id/about_app"
        android:background="#FFF"
        android:textColor="#111"
        android:onClick="aboutapp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <Button
        android:text="@string/update"
        android:id="@+id/update"
        android:onClick="update"
        android:background="#FFF"
        android:textColor="#111"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        />
    <Button
        android:layout_marginTop="100dp"
        android:text="@string/feedback"
        android:onClick="feedback"
        android:id="@+id/feedback"
        android:background="#FFF"
        android:textColor="#111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</FrameLayout>

</android.support.design.widget.CoordinatorLayout>
